--- a/css/style.css
+++ b/css/style.css
@@ -19,17 +19,15 @@ header ul li{
     width: 120px;
     cursor: pointer;
 }
-header ul li:focus{
-    outline: none;
-    border: 1px solid #ff6f6f;
-}
 header ul li a{
     color: #767676;
 }
 header ul li a:hover{
     font-weight: bold;
 }
-header ul .active{
+header ul .active,
+header ul li:focus{
+    outline: none;
     background: #fff;
     border-top:1px solid #ff6f6f;
     border-left: 1px solid #f5f5f5;
@@ -48,6 +46,7 @@ h2{
     margin: 20px;
 }
 .tab-content{
+    height: 134px;
     display: none;
 }
 
@@ -122,4 +121,20 @@ h2{
 }
 .blue{
     color:DodgerBlue;
+}
+.console{
+    width: 80%;
+    margin: 10px auto;
+}
+.console .output{
+    border: 1px solid #c3c3c3;
+    width: 100%;
+    height: 200px;
+    overflow-y: scroll;
+}
+.console .input{
+    border: 1px solid #c3c3c3;
+    width: 100%;
+    margin-top: 5px;
+    height: 35px;
 }
