--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ header ul{
     border-bottom: 1px solid #f5f5f5;
 }
 header ul li{
+    margin: 0 1px;
     padding: 10px;
     display: inline-block;
     text-align: center;
@@ -164,13 +165,14 @@ h2{
     width: 80%;
     margin: 10px auto;
 }
-.console .output{
+.console_output{
     border: 1px solid #c3c3c3;
     width: 100%;
     height: 200px;
     overflow-y: scroll;
 }
-.console .input{
+.console_input{
+    outline: none;
     border: 1px solid #c3c3c3;
     width: 100%;
     margin-top: 5px;
