--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,9 @@ header ul li{
     background: #f5f5f5;
     width: 120px;
     cursor: pointer;
-}
-header ul li a{
     color: #767676;
 }
-header ul li a:hover{
+header ul li:hover{
     font-weight: bold;
 }
 header ul .active,
@@ -34,12 +32,12 @@ header ul li:focus{
     border-left: 1px solid #f5f5f5;
     border-right: 1px solid #f5f5f5;
 }
-header ul .active a:hover{
+header ul .active:hover{
     font-weight: normal;
 }
 .main-content{
     width: 80%;
-    margin: 100px auto;
+    margin: 50px auto;
 }
 h2{
     float: left;
